Mon Oct 10 11:16:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Updated for next release

        * bin/make_release.py:
          Next time we don't ship vc8 anymore

        * docs/bczar/bczar.html:
          Make x.0.5 public

        * etc/index.html:
          Make x.0.5 public

Mon Oct 10 08:48:51 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.0.5 released.

Sat Oct  8 09:00:00 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ACEXML/examples/SAXPrint/namespaces.xml:
        * ACEXML/examples/SAXPrint/ns.svc.conf.xml:
        * ACEXML/examples/SAXPrint/simple.svcconf.xml:
        * ACEXML/examples/SAXPrint/svc.conf.xml:
          XML does not allow anything before the xml-tag.

Fri Oct  7 09:45:31 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ACEXML/docs/TODO.txt:
        * ACEXML/docs/bugs.txt:
        * ASNMP/tests/run_tests.sh:
          Fuzz

Fri Oct  7 09:10:55 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ACEXML/docs/readme.txt:
        * ASNMP/README:
        * Kokyu/README:
        * bin/LabVIEW_RT/README:
        * bin/PerlACE/README:
        * contrib/FaCE/README:
        * examples/C++NPv1/README:
        * examples/C++NPv2/README:
        * examples/IPC_SAP/SSL_SAP/README:
        * examples/Semaphores/README:
        * html/README:
        * netsvcs/lib/README:
        * performance-tests/README:
        * performance-tests/RPC/README:
        * performance-tests/Synch-Benchmarks/Perf_Test/README:
        * performance-tests/Synch-Benchmarks/README:
        * performance-tests/Synch-Benchmarks/Synch_Lib/README:
        * performance-tests/TCP/README:
        * performance-tests/TTCP/C/README:
        * performance-tests/UDP/README:
        * protocols/ace/HTBP/README:
        * websvcs/README:
          Fuzz: No id-tags. Also uniform way of declaring the Id-tags

Fri Oct  7 07:48:32 UTC 2011  Marcel Smit  <msmit@remedy.nl>
